--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "express": "^4.16.3",
     "nodemon": "^1.18.1",
     "sqlite3": "^4.0.1"
+  },
+  "engines": {
+    "node": "~8.9.3",
+    "npm": "~6.1.0"
   }
 }
