--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "heroku": "^7.5.11",
     "nodemon": "^1.18.1",
     "sqlite3": "^4.0.1"
   },
