--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.3",
     "heroku": "^7.5.11",
     "nodemon": "^1.18.1",
+    "python-shell": "^0.5.0",
     "sqlite3": "^4.0.1"
   },
   "engines": {
