--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "better-sqlite3": "^4.1.4",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "heroku": "^7.5.11",
